@@ -1,3 +1,9 @@
+TAG: rvload-5-1-7-9
+DATE: 03/13/2014
+STAFF: sc
+CHANGES:
+1) Added check for no actual synonym value
+
 TAG: rvload-5-1-7-8
 DATE: 03/10/2014
 STAFF: sc
